Updated material for professional site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>t. e. lombardi</title>
+	<link rel="stylesheet" type="text/css" href="tl.css">
+</head>
 <body>
-<h1>Place Holder</h1>
-<p>In development.</p>
+    <div class="large">
+          <a href="cv.html">CV</a> | <a href="portfolio.html">Portfolio</a>
+	</div>
+	
+	<div>
+	      <img src="hierarchy-cloud_1024.jpg" />
+	</div>
+	
+	<div class="large">
+          <a id="current" href="index.html">Home</a> | <a href="contact.html">Contact</a>
+	</div>
 </body>
 </html>
