New changes pushed
Adding new material to initial build

--- a/contact.html
+++ b/contact.html
@@ -6,23 +6,25 @@
 </head>
 <body>
     <div class="large">
-          <a href="cv.html">CV</a> | <a href="portfolio.html">Portfolio</a>
+          <a href="cv.html" title="Curriculum Vitae" alt="Curriculum Vitae">CV</a> | <a href="portfolio.html" 
+		               title="Project Work" alt="Project Work">Portfolio</a>
 	</div>
 	
 	<div>
-	      <img src="tl.jpg" />
+	      <img src="tl.jpg" title="T. E. Lombardi" alt="T. E. Lombardi" />
 	</div>
 	
 	<div class="medium">
 		    <p style="margin: 0px 0px 0px 0px">Email: telombardi@gmail.com</p><br />			
 			<a href="https://www.linkedin.com/in/telombardi/" target="_blank"><img src="linkedin.png" 
-			    style="border: 0px" /></a> <br />
+			    style="border: 0px" title="LinkedIn: telombardi" alt="LinkedIn: telombardi" /></a> <br />
 			<a href="https://www.youtube.com/user/telombardi" target="_blank">
-			    <img src="youtube.png" style="border: 0px" height="80" width="146" /></a>
+			    <img src="youtube.png" style="border: 0px" height="80" width="146"
+				title="YouTube: telombardi" alt="YouTube: telombardi" /></a>
 	</div>
 	
 	<div class="large">
-          <a href="index.html">Home</a> | <a id="current" href="contact.html">Contact</a>
+          <a href="index.html" title="Home Page" alt="Home Page">Home</a> | <a id="current" href="contact.html" title="Contact Information" alt="Contact Information">Contact</a>
 	</div>
 </body>
 </html>
