--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</div>
 	
 	<div>
-	      <img src="hierarchy-cloud_1024.jpg" />
+	      <img src="saints_network.jpg" />
 	</div>
 	
 	<div class="large">
