Updated contact page with new information
Added github and google scholar

--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,21 @@
 	</div>
 	
 	<div class="medium">
-		    <p style="margin: 0px 0px 0px 0px">Email: telombardi@gmail.com</p><br />			
-			<a href="https://www.linkedin.com/in/telombardi/" target="_blank"><img src="linkedin.png" 
-			    style="border: 0px" title="LinkedIn: telombardi" alt="LinkedIn: telombardi" /></a> <br />
+		    <p style="margin: 0px 0px 0px 0px"><a href="mailto:telombardi@gmail.com">telombardi@gmail.com</a>  |  <a href="https://twitter.com/telombardi"
+			  target="_blank">@telombardi</a></p><br />	
+            <a href="https://www.linkedin.com/in/telombardi/" target="_blank"><img src="linkedin.png" 
+			    style="border: 0px" title="LinkedIn: telombardi" alt="LinkedIn: telombardi" /></a><br />			  
 			<a href="https://www.youtube.com/user/telombardi" target="_blank">
 			    <img src="youtube.png" style="border: 0px" height="80" width="146"
 				title="YouTube: telombardi" alt="YouTube: telombardi" /></a>
+			<a href="https://scholar.google.com/citations?user=tQiPuksAAAAJ&hl=en" target="_blank">
+			    <img src="google_scholar.png" style="border: 0px" height="80" width="80"
+				title="Google Scholar: telombardi" alt="Google Scholar: telombardi" /></a>
+			<a href="https://github.com/telombardi" target="_blank">
+			    <img src="GitHub_Logo.png" style="border: 0px" height="80" width="146"
+				title="GitHub: telombardi" alt="GitHub: telombardi" /></a><br />
+			
+				
 	</div>
 	
 	<div class="large">
