--- a/cv.html
+++ b/cv.html
@@ -158,7 +158,7 @@ Site: <a href="http://www.rnaseqforthenextgeneration.org/profiles/lombardi.html"
 <p>Served as reviewer for <em>Machine Vision and Applications.</em></p>
 <p>THATCamp Pittsburgh Organizing Committee. (2013, June).</p>
 
-	<h1>UNIVERSITY SERVICE</h1>
+	<h1>SERVICE TO UNIVERSITY</h1>
 <p>Faculty Executive Committee Member. Spring, 2016 to Present.</p>
 <p>Program Coordinator of Computational Science Concentration. Spring, 2015 to Present.</p>
 <p>Academic Status Committee Member. Spring, 2014 to Spring, 2016.</p>
