--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 				<a href="#">Bioinformatics</a>
 			</div>
 			<a href="#">
-				<img src="http://thecodeplayer.com/uploads/media/2rT2vdx.jpg"/>
+				<img src="hof_process_new.jpg"/>
 			</a>
 		</li>
 		<li>
