Added ResearchGate links
Added ResearchGate links

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
 			<a href="https://scholar.google.com/citations?user=tQiPuksAAAAJ&hl=en" target="_blank">
 			    <img src="google_scholar.png" style="border: 0px" height="80" width="80"
 				title="Google Scholar: telombardi" alt="Google Scholar: telombardi" /></a>
+				<a href="https://www.researchgate.net/profile/Thomas_Lombardi" target="_blank">
+			    <img src="research_gate.png" style="border: 0px" height="80" width="80"
+				title="ResearchGate" alt="ResearchGate" /></a>
 			<a href="https://github.com/telombardi" target="_blank">
 			    <img src="GitHub_Logo.png" style="border: 0px" height="80" width="146"
 				title="GitHub: telombardi" alt="GitHub: telombardi" /></a><br />
