--- a/data_mining_R/understandingDM/understandingDM.html
+++ b/data_mining_R/understandingDM/understandingDM.html
@@ -89,11 +89,21 @@ code > span.in { color: #8f5902; font-weight: bold; font-style: italic; } /* Inf
 </div>
 <div id="data-understanding" class="section level2">
 <h2>Data Understanding</h2>
-<p>This phase can include: * data collection; * preliminary data analysis; * data quality review.</p>
+<p>This phase can include:</p>
+<ul>
+<li>data collection;</li>
+<li>preliminary data analysis;</li>
+<li>data quality review.</li>
+</ul>
 </div>
 <div id="data-preparation" class="section level2">
 <h2>Data Preparation</h2>
-<p>Data preparation takes the data in its initial form and transforms it into its final form for analysis. This may include many steps such as: * Outlier analysis * Handling missing values * Separating data into training and testing sets</p>
+<p>Data preparation takes the data in its initial form and transforms it into its final form for analysis. This may include many steps such as:</p>
+<ul>
+<li>Outlier analysis</li>
+<li>Handling missing values</li>
+<li>Separating data into training and testing sets</li>
+</ul>
 </div>
 <div id="modeling" class="section level2">
 <h2>Modeling</h2>
