--- a/contact.html
+++ b/contact.html
@@ -16,16 +16,20 @@
 	
 	<div class="medium">
 		    <p style="margin: 0px 0px 0px 0px"><a href="mailto:telombardi@gmail.com">telombardi@gmail.com</a>  |  <a href="https://twitter.com/telombardi"
-			  target="_blank">@telombardi</a></p><br />	
-            <a href="https://www.linkedin.com/in/telombardi/" target="_blank"><img src="linkedin.png" 
-			    style="border: 0px" title="LinkedIn: telombardi" alt="LinkedIn: telombardi" /></a><br />			  
+			  target="_blank">@telombardi</a></p>	
+            <p style="margin: 5px 0px 5px 0px">
+               <a href="http://orcid.org/0000-0001-9824-0659" target="_blank">
+                 http://orcid.org/0000-0001-9824-0659</a></p>			   
+		
 			<a href="https://www.youtube.com/user/telombardi" target="_blank">
 			    <img src="youtube.png" style="border: 0px" height="80" width="146"
 				title="YouTube: telombardi" alt="YouTube: telombardi" /></a>
 			<a href="https://scholar.google.com/citations?user=tQiPuksAAAAJ&hl=en" target="_blank">
 			    <img src="google_scholar.png" style="border: 0px" height="80" width="80"
 				title="Google Scholar: telombardi" alt="Google Scholar: telombardi" /></a>
-				<a href="https://www.researchgate.net/profile/Thomas_Lombardi" target="_blank">
+			<a href="https://www.linkedin.com/in/telombardi/" target="_blank"><img src="linkedin.png" 
+			    style="border: 0px" title="LinkedIn: telombardi" alt="LinkedIn: telombardi" /></a>	
+			<a href="https://www.researchgate.net/profile/Thomas_Lombardi" target="_blank">
 			    <img src="research_gate.png" style="border: 0px" height="80" width="80"
 				title="ResearchGate" alt="ResearchGate" /></a>
 			<a href="https://github.com/telombardi" target="_blank">
