--- a/bis/introduction_2_bis.html
+++ b/bis/introduction_2_bis.html
@@ -144,7 +144,7 @@ $(document).ready(function () {
 <p class="caption">The Virgin Island Daily News Website</p>
 </div>
 <p>The field names provide context for users helping them to input appropriate data into the form.</p>
-<p>Even this simple form defines a process for collecting data so that it can be transformed into information. The CAPTCHA ( __C__ompletely __A__utomated <strong>P</strong> ublic <strong>T</strong> uring test to tell <strong>C</strong> omputers and <strong>H</strong> umans <strong>A</strong> part) ensures that the user filling out the form is in fact a person rather than a bot. In other words, the website is designed to check the quality of the data being input to ensure that each record represents a real user. Quality data is much easier to transform into useful information.</p>
+<p>Even this simple form defines a process for collecting data so that it can be transformed into information. The CAPTCHA ( <strong>C</strong> ompletely <strong>A</strong> utomated <strong>P</strong> ublic <strong>T</strong> uring test to tell <strong>C</strong> omputers and <strong>H</strong> umans <strong>A</strong> part) ensures that the user filling out the form is in fact a person rather than a bot. In other words, the website is designed to check the quality of the data being input to ensure that each record represents a real user. Quality data is much easier to transform into useful information.</p>
 <p>Although there are many definitions of information (Floridi, 2005), for the purposes of this class, <strong>information</strong> is processed data that is meaningful to a particular audience in a particular context.</p>
 <p>It is important to recognize that data and information serve an important role in the construction of knowledge and wisdom (Rowley, 2007).</p>
 </div>
@@ -190,7 +190,7 @@ $(document).ready(function () {
 </div>
 <div id="examples-of-careers-in-technology" class="section level1">
 <h1>Examples of Careers in Technology</h1>
-<p>[Classroom exercise: Find an example of career in technology that you find compelling.]</p>
+<p>[Classroom exercise: Find an example of a career in technology that you find compelling.]</p>
 </div>
 <div id="sources" class="section level1">
 <h1>Sources</h1>
