--- a/bis/index.html
+++ b/bis/index.html
@@ -147,13 +147,13 @@ $(document).ready(function () {
 <tr class="odd">
 <td>1/9</td>
 <td>Introduction and Course Overview</td>
-<td><a href="cis210_syllabus.pdf">Syllabus</a></td>
+<td><a href="cis210_syllabus.pdf">Syllabus</a>; <a href="student_survey.docx">Student Survey</a></td>
 <td>Send introductory email to me by 1/11</td>
 </tr>
 <tr class="even">
 <td>1/11</td>
-<td>Introduction and Course Overview</td>
-<td>Read DC 12, <a href="introduction_2_bis.html">Notes</a></td>
+<td><a href="introduction_2_bis.html">Introduction and Course Overview</a></td>
+<td>Read DC 12</td>
 <td>Syllabus Quiz</td>
 </tr>
 </tbody>
