--- a/is/index.html
+++ b/is/index.html
@@ -146,21 +146,21 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td>1/9</td>
-<td>Introduction and Course Overview</td>
-<td><a href="bus525_syllabus.pdf">Syllabus</a>, <a href="introduction_2_is.html">Notes</a></td>
+<td><a href="introduction_2_is.html">Introduction and Course Overview</a></td>
+<td><a href="bus525_syllabus.pdf">Syllabus</a>; <a href="student_survey.docx">Student Survey</a></td>
 <td>Send introductory email to me by 1/16</td>
 </tr>
 <tr class="even">
 <td>1/16</td>
 <td>No Class</td>
-<td>Please read:</td>
-<td>something</td>
+<td>Please begin reading for next week.</td>
+<td></td>
 </tr>
 <tr class="odd">
 <td>1/23</td>
-<td>User Needs</td>
-<td>Reading</td>
-<td>Quiz</td>
+<td>Understanding and Documenting User Needs</td>
+<td><a href="https://www.interaction-design.org/literature/book/the-encyclopedia-of-human-computer-interaction-2nd-ed/human-computer-interaction-brief-intro">Human Computer Interaction - brief intro</a>; <a href="http://www.uxbooth.com/articles/complete-beginners-guide-to-interaction-design/">Complete Beginner’s Guide to Interaction Design</a>; <a href="https://www.interaction-design.org/literature/book/the-encyclopedia-of-human-computer-interaction-2nd-ed/interaction-design-brief-intro">Interaction Design - brief intro</a></td>
+<td>Hint: Prepare for reading quiz</td>
 </tr>
 </tbody>
 </table>
