--- a/is/index.html
+++ b/is/index.html
@@ -147,8 +147,8 @@ $(document).ready(function () {
 <tr class="odd">
 <td>1/9</td>
 <td><a href="introduction_2_is.html">Introduction and Course Overview</a></td>
-<td><a href="bus525_syllabus.pdf">Syllabus</a>; <a href="student_survey.docx">Student Survey</a></td>
-<td>Send introductory email to me by 1/16</td>
+<td><a href="bus525_syllabus.pdf">Syllabus</a></td>
+<td>Send introductory email to me by 1/16 with introductory survey attached: <a href="student_survey.docx">Student Survey</a></td>
 </tr>
 <tr class="even">
 <td>1/16</td>
