--- a/is/introduction_2_is.html
+++ b/is/introduction_2_is.html
@@ -219,7 +219,7 @@ $(document).ready(function () {
 <p>Agile methodologies include a large number of development methodologies that are significantly less sequential in their application. Agile development methodologies respond to some of the weaknesses of the waterfall model.</p>
 <p>Read the extremely short “Manifesto for Agile Software Development” to understand the values motivating agile development methodologies: <a href="http://agilemanifesto.org" class="uri">http://agilemanifesto.org</a></p>
 <p>Read the “Principles behind the Agile Manifesto”: <a href="http://agilemanifesto.org/principles.html" class="uri">http://agilemanifesto.org/principles.html</a></p>
-<p>For more information, wath this short video about Agile development.</p>
+<p>For more information, watch this short video about Agile development (12 minutes).</p>
 <iframe src="https://www.youtube.com/embed/Z9QbYZh1YXY" width="420" height="315" frameborder="0" allowfullscreen=""></iframe>
 <p><strong>Source</strong>: <a href="https://www.youtube.com/watch?v=Z9QbYZh1YXY" class="uri">https://www.youtube.com/watch?v=Z9QbYZh1YXY</a></p>
 </div>
