Update for holiday week
Update for holiday week

--- a/bis/index.html
+++ b/bis/index.html
@@ -128,6 +128,16 @@ $(document).ready(function () {
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <p>This course website provides updates and reminders for students in CIS 210. Please check this website often for the most current course notes and other information.</p>
+</div>
+<div id="announcements" class="section level1">
+<h1>Announcements</h1>
+<ol style="list-style-type: decimal">
+<li>My UVI email is: <a href="mailto:thomas.lombardi@uvi.edu">thomas.lombardi@uvi.edu</a></li>
+<li>Over the weekend, I will integrate Blackboard into the class.</li>
+</ol>
+</div>
+<div id="schedule" class="section level1">
+<h1>Schedule</h1>
 <table style="width:94%;">
 <colgroup>
 <col width="20%"></col>
@@ -155,6 +165,18 @@ $(document).ready(function () {
 <td><a href="introduction_2_bis.html">Introduction and Course Overview</a></td>
 <td>Read DC 12</td>
 <td>Syllabus Quiz</td>
+</tr>
+<tr class="odd">
+<td>1/16</td>
+<td>No class</td>
+<td>Read DC 1</td>
+<td></td>
+</tr>
+<tr class="even">
+<td>1/18</td>
+<td>Intro to Computer Hardware</td>
+<td>Read DC 1</td>
+<td>Be prepared for a quiz</td>
 </tr>
 </tbody>
 </table>
