--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>t. e. lombardi</title>
+    <title>Digital Reckoning</title>
 	<link rel="stylesheet" type="text/css" href="tl.css">
 </head>
 <body>
-    <div class="large">
-          <a id="current" href="cv.html">CV</a> | <a href="portfolio.html">Portfolio</a>
+    <div class="huge">
+         Digital Reckoning
+    </div>
+    <div class="small">
+          The Website of Thomas E. Lombardi
 	</div>
 	
 	<button class="accordion">Education</button>
@@ -19,8 +22,10 @@
 
 	<button class="accordion">Professional Appointments</button>
 	<div class="panel">
+	    <p><strong>Assistant Professor of Computer Information Systems</strong><br />
+			University of the Virgin Islands, 2017 to present</p>
 		<p><strong>Assistant Professor of Computing and Information Studies</strong><br />
-			Washington and Jefferson College, 2013 to Present</p>
+			Washington and Jefferson College, 2013 to 2016</p>
 		<p><strong>Visiting Assistant Professor of Information Technology Leadership</strong><br />
 			Washington and Jefferson College, 2011 to 2013</p>
 		<p><strong>Assistant Professor of Information Technology</strong><br />
@@ -34,31 +39,29 @@
     <p>Lombardi, T. (2008). <em>The Classification of Style in Painting: 
 	Computational Approaches to Artistic Style.</em> VDM Verlag.</p>
     <h2>Refereed Journal Articles</h2>	
+    <p>Carrieri, D., Lombardi, T., et al. (2017). Differential
+	transcript and protein profiles under nitrogen starvation of 
+	Synechocystis 6803 wild-type and &Delta;glgC, a mutant incapable of glycogen storage. 
+	<em>Algal Research,</em> 21, 64-75. 
+	<a href="http://www.sciencedirect.com/science/article/pii/S2211926416306166">
+	http://www.sciencedirect.com/science/article/pii/S2211926416306166</a></p>
     <p>Lombardi, T. (2014). Mining the Cloud of Witness: Inferring the
     Prestige of Saints from Medieval Paintings. <em>Global Journal of
 	Human Social Sciences.</em> GJHSS-A, 14(11), 15-23.</p>
-	<p>Lombardi, T. (2014). The Communion of Saints: Networks and 	Iconography. <em>Leonardo</em>, 47(3), 276.</p>
+	<p>Lombardi, T. (2014). The Communion of Saints: Networks and Iconography. <em>Leonardo</em>, 47(3), 276.</p>
     <h2>Conference Proceedings</h2>	
     <p>Holland-Minkley, A. M., & Lombardi, T. (2016, February). Improving
     Engagement in Introductory Courses with Homework
 	Resubmission. In <em>Proceedings of the 47th ACM Technical Symposium on Computing Science Education</em> (pp. 534-539). ACM.</p>
 	<p>Lombardi, T., Cha, S.H., and Tappert, C. (2005, January). Lightweight Image Retrieval System for Paintings. In <em>Proc. Storage and Retrieval Methods and Applications for Multimedia, Electronic Imaging 2005</em>, San Jose, CA.</p>
 	<p>Lombardi, T., Cha, S.H., and Tappert, C. (2004, October). A Graphical User Interface for a Fine-Art Painting Image Retrieval System. In <em>Proc. 6th ACM SIGMM Int. Workshop on Multimedia Information Retrieval</em>, New York, NY.</p>
-
+   <h2>Book Chapters</h2>
+   <p>Fee, S.B. & Lombardi, T. (2017). Adapting Problem-Based Learning to Database Courses in the Digital Age. In D. Loveless, P. Sullivan, K. Dredger, & J. Burns (Eds.), <em>Deconstructing the Education-Industrial Complex in the Digital Age</em>, (pp. 116-133). IGI.</p>
    <h2>Manuscripts in Submission</h2>		
-
-	<p>Carrieri, D., Lombardi, T., et al. (2016, February). Differential
-	transcript and protein profiles under nitrogen starvation of 
-	Synechocystis 6803 wild-type and ΔglgC, a mutant incapable of glycogen storage. 
-	Submitted to <em>Algal Research</em>.</p>
-
-    <h2>Manuscripts in Preparation</h2>		
-
-	<p>Fee, S.B., Holland-Minkley, A. M., & Lombardi, T. <em>New Directions for Computing Education: Embedding Computing Across Disciplines</em>. Springer. Edited Volume.</p>
-	<p>Fee, S.B. & Lombardi, T. Adapting Problem-Based Learning to Database Courses in the Digital Age. Chapter for <em>Deconstructing the Education-Industrial Complex in the Digital Age</em>. IGI.</p>
+   <p>Berg-Fulton, T., Langmead, A., Lombardi, T., Newbury, D., & Nygren, C. A Role-Based Model for Successful Collaboration in Digital Art History. Submitted to <em>International Journal of Digital Art History</em>.
+   <p>Fee, S.B., Holland-Minkley, A. M., & Lombardi, T. <em>New Directions for Computing Education: Embedding Computing Across Disciplines</em>. Springer. Edited Volume.</p>
 	<p>Lombardi, T. Macro-analysis in the Arts and Sciences. <em>Chapter for New Directions for Computing Education.</em></p>
 	<p>Holland-Minkley, A. M. & Lombardi, T. Decision-tree Analysis to Assess Small-scale Innovations. Chapter for <em>New Directions for Computing Education.</em></p>
-
      <h2>Web-Based Publications</h2>
      <p>Lai, Y. & Lombardi, T. (2016, January). <em>Bioinformatics.</em>
 		<a href="http://www.washjeff-cis.net/bioinformatics/" target="_blank">http://www.washjeff-cis.net/bioinformatics/</a></p>
@@ -108,8 +111,7 @@ Site: <a href="http://www.rnaseqforthenextgeneration.org/profiles/lombardi.html"
 <a href="http://networkontologies.org/" target="_blank">http://networkontologies.org/ </a></p>
 <p>Computational Aesthetics Research Group. (2014, August). Organized and participated in exploratory research group activities including project brainstorming and bibliographic review.</p>
 <p>Digital Mitford Project Workshop. (2014, June).</p> 
-
-	</div>
+</div>
 	
 	<button class="accordion">Teaching</button>
 	<div class="panel">
@@ -154,6 +156,8 @@ Site: <a href="http://www.rnaseqforthenextgeneration.org/profiles/lombardi.html"
 	<button class="accordion">Service</button>
 	<div class="panel">
 	<h1>SERVICE TO PROFESSION</h1>
+<p>Responded to Annette Vee's Colloquium Talk entitled Dartmouth 1966: Composition and Computation Converge.
+<a href="http://www.humcenter.pitt.edu/event/colloquium-dartmouth-1966-composition-and-computation-converge">http://www.humcenter.pitt.edu/event/colloquium-dartmouth-1966-composition-and-computation-converge</a></p>
 <p>Consulting Editor in Data Visualization Group. The Digital Mitford Project.</p>
 <p>Served as reviewer for <em>Machine Vision and Applications.</em></p>
 <p>THATCamp Pittsburgh Organizing Committee. (2013, June).</p>
@@ -187,7 +191,7 @@ AppNet, Inc. Stamford, CT. June, 1999 to September, 2000.</p>
 	</div>
 	
 	<div class="large">
-          <a href="index.html">Home</a> | <a href="contact.html">Contact</a>
+          <a href="index.html">Portfolio</a> | <a id="current" href="cv.html">CV</a> | <a href="contact.html">Contact</a>
 	</div>
 	
 	<script>
