--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>t. e. lombardi</title>
+    <title>Digital Reckoning</title>
 	<link rel="stylesheet" type="text/css" href="tl.css">
 </head>
 <body>
-    <div class="large">
-          <a href="cv.html">CV</a> | <a href="portfolio.html">Portfolio</a>
+    <div class="huge">
+         Digital Reckoning
+    </div>
+    <div class="small">
+          The Website of Thomas E. Lombardi
 	</div>
 	
-	<div>
-	      <img src="saints_network.jpg" />
-	</div>
+	<div class="accordian">
+	<ul>
+		<li>
+			<div class="image_title">
+				<a href="#">Networking</a>
+			</div>
+			<a href="#">
+				<img src="hierarchy-cloud_640_320.jpg" title="Network Science Projects" alt="Network Science Projects" />
+			</a>
+		</li>
+		<li>
+			<div class="image_title">
+				<a href="#">Database Systems</a>
+			</div>
+			<a href="#">
+				<img src="hof_process_new.jpg" title="Database Systems Projects" alt="Database Systems Projects" />
+			</a>
+		</li>
+		<li>
+			<div class="image_title">
+				<a href="#">Humanity and Technology</a>
+			</div>
+			<a href="#">
+				<img src="bab.jpg"/>
+			</a>
+		</li>
+		<li>
+			<div class="image_title">
+				<a href="#">Data Analysis</a>
+			</div>
+			<a href="#">
+				<img src="anthony_big.jpg"/>
+			</a>
+		</li>
+		<li>
+			<div class="image_title">
+				<a href="#">Bioinformatics</a>
+			</div>
+			<a href="bioinformatics.html">
+				<img src="bionet_640_320.jpg"/>
+			</a>
+		</li>
+	</ul>
+</div>
 	
 	<div class="large">
-          <a id="current" href="index.html">Home</a> | <a href="contact.html">Contact</a>
+          <a id="current" href="index.html">Portfolio</a> | <a href="cv.html">CV</a> | <a href="contact.html">Contact</a>
 	</div>
 </body>
 </html>
