--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>t. e. lombardi</title>
+    <title>Digital Reckoning</title>
 	<link rel="stylesheet" type="text/css" href="tl.css">
 </head>
 <body>
-    <div class="large">
-          <a href="cv.html" title="Curriculum Vitae" alt="Curriculum Vitae">CV</a> | <a href="portfolio.html" 
-		               title="Project Work" alt="Project Work">Portfolio</a>
+     <div class="huge">
+         Digital Reckoning
+    </div>
+    <div class="small">
+          The Website of Thomas E. Lombardi
 	</div>
 	
 	<div>
 	      <img src="tl.jpg" title="T. E. Lombardi" alt="T. E. Lombardi" />
 	</div>
 	
-	<div class="medium">
+	<div class="small">
 		    <p style="margin: 0px 0px 0px 0px"><a href="mailto:telombardi@gmail.com">telombardi@gmail.com</a>  |  <a href="https://twitter.com/telombardi"
 			  target="_blank">@telombardi</a></p>	
             <p style="margin: 5px 0px 5px 0px">
@@ -40,7 +42,7 @@
 	</div>
 	
 	<div class="large">
-          <a href="index.html" title="Home Page" alt="Home Page">Home</a> | <a id="current" href="contact.html" title="Contact Information" alt="Contact Information">Contact</a>
+          <a href="index.html">Portfolio</a> | <a href="cv.html">CV</a> | <a id="current" href="contact.html">Contact</a>
 	</div>
 </body>
 </html>
