--- a/cv.html
+++ b/cv.html
@@ -87,7 +87,7 @@
 <p>Lombardi, T. (2014, July 9th). Mining the Cloud of Witness: Inferring the Prestige of Saints from Medieval Paintings. Paper presented at the Digital Humanities 2014 Conference in Lausanne, Switzerland (DH2014).</p>
 <p>Lombardi, T. and Parsons, E. (2013, October 5th). Network Analysis Workshop. Presentation for THATCamp Pittsburgh, Pittsburgh, Pennsylvania. </p>
 <p>Lombardi, T. (2013, June 5th). Dangerous Liaisons: Epistolary Structure and Plot Analysis. Paper presented at the International Conference on Network Science (NetSci2013) in Copenhagen, Denmark.</p>  
-<p>Lombardi, T. (2013, June 4th). The Communion of the Saints: Networks and the Study of Iconography. Paper presented at Arts, Humanities, and Complex Networks – 4th Leonardo satellite symposium at NetSci2013 (AHCN2013) in Copenhagen, Denmark.</p>
+<p>Lombardi, T. (2013, June 4th). The Communion of the Saints: Networks and the Study of Iconography. Paper presented at Arts, Humanities, and Complex Networks, 4th Leonardo satellite symposium at NetSci2013 (AHCN2013) in Copenhagen, Denmark.</p>
 <p>Lombardi, T. (1995, May 4). Mission and Martyrdom in Franciscan Art and History. Paper presented at the 30th International Congress on Medieval Studies. Western Michigan University, Kalamazoo, MI.</p>
 
 <h1>CAMPUS TALKS</h1>
