--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</li>
 		<li>
 			<div class="image_title">
-				<a href="#">Bioinformatics</a>
+				<a href="bioinformatics.html">Bioinformatics</a>
 			</div>
 			<a href="bioinformatics.html">
 				<img src="bionet_640_320.jpg"/>
