--- a/thomas_lombardi.html
+++ b/thomas_lombardi.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>The Resume of Thomas Lombardi</h1>
-        <img src="tl.jpeg" />
+        <img src="thomas_lombardi.jpeg" />
         <h2>Education</h2>
             <ul>
                 <li>D.P.S. in Computing Studies, <em>Pace University</em></li>
