--- a/tenure_packet/index.html
+++ b/tenure_packet/index.html
@@ -13,14 +13,14 @@
       <h1>Thomas Lombardi - CV</h1>
     </div>
     <div class="w3-padding-64">
-      <a href="#" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Home</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Research</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Teaching</a>
-      <a href="#contact" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Service</a>
-	  <a href="#contact" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Support</a>
+      <a href="#home" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Home</a>
+      <a href="#research" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Research</a>
+      <a href="#teaching" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Teaching</a>
+      <a href="#service" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Service</a>
+	  <a href="#support" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-large">Support</a>
     </div>
   </div>
-  <div class="w3-half w3-white w3-container" style="height:700px">
+  <div class="w3-half w3-white w3-container" style="height:700px" id="home">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="./images/tl.jpg" class="w3-margin w3-circle" alt="Person" style="width:25%">
@@ -64,7 +64,7 @@
 
 <!-- Second Grid: Work & Resume -->
 <div class="w3-row">
-  <div class="w3-half w3-white w3-center" style="min-height:800px" id="work">
+  <div class="w3-half w3-white w3-center" style="min-height:800px" id="research">
     <div class="w3-padding-64">
       <h1>Research</h1>
 	  <p>Data Science, Multidisciplinary Computing, Computing Education</p>
@@ -173,7 +173,7 @@
 	  
     </div>
   </div>
-  <div class="w3-half w3-black w3-container" style="min-height:800px">
+  <div class="w3-half w3-black w3-container" style="min-height:800px" id="teaching">
     <div class="w3-padding-64 w3-center">
       <h1>Teaching</h1>
       <p>Course Portfolio</p>
@@ -234,8 +234,8 @@
 </div>
 
 <!-- Third Grid: Swing By & Contact -->
-<div class="w3-row" id="contact">
-  <div class="w3-half w3-black w3-container w3-center" style="height:700px">
+<div class="w3-row">
+  <div class="w3-half w3-black w3-container w3-center" style="height:700px" id="service">
     <div class="w3-padding-64">
       <h1>Service</h1>
 	  <h2>Service to University</h2>
@@ -266,7 +266,7 @@
 	   <h2>Service to Community</h2>
     </div>
   </div>
-  <div class="w3-half w3-white w3-container w3-center" style="height:700px">
+  <div class="w3-half w3-white w3-container w3-center" style="height:700px" id="support">
     <div class="w3-padding-64 w3-padding-large">
       <h1>Support</h1>
 	  <h2>UVI Documentation</h2>
